[package]
name = "borgerbot"
authors = ["InaccurateTank (Tank#1623)"]
description = "A poorly assembled custom chatbot"
repository = "https://github.com/InaccurateTank"
version = "0.1.0"
edition = "2021"

[dependencies]
poise = { version = "0.2.*" }
tokio = { version = "1.19", features = ["macros", "rt-multi-thread"] }
regex = { version = "1.5" }
time = { version = "0.3.*", features = ["formatting"] }
rand = { version = "0.8.*" }

[dev-dependencies]
brunch = "0.2.*"

[[bench]]
name = "test"
harness = false